--- a/404.html
+++ b/404.html
@@ -57,6 +57,7 @@
         </footer>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>   
         <script src="js/main.min.js"></script>
     </body>
 </html>
