--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+    <meta property="og:title" content="Traveling world">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:locale" content="en_US">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <script src="angular-1.8.2/angular.min.js"></script>
     <script src="angular-1.8.2/angular-route.min.js"></script>
     <script src="angular-1.8.2/angular-sanitize.min.js"></script>
@@ -21,7 +26,7 @@
     <script src="app/components/register-form.js"></script>
     <script src="app/controllers/main-ctrl.js"></script>
     <!----------------------------------------------->
-    <title></title>
+    <title>Traveling world</title>
 </head>
 <body class="bg-secondary"
     data-ng-controller="main-ctrl" data-ng-cloak>    
@@ -34,6 +39,7 @@
     </main>
     <app-footer></app-footer>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>    
+    <script src="js/bootstrap.bundle.min.js"></script>   
+    <script src="js/gpdr__bootstrap.js"></script> 
 </body>
 </html>
